uploading changes to main code

--- a/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
+++ b/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
@@ -1302,6 +1302,8 @@
     "# Visualize the Sharpe ratios as a bar chart\n",
     "# Include a title parameter and adjust the figure size\n",
     "display(sharpe_ratios.plot.bar(figsize=(10,7), title='The annualized Sharpe Ratios for each of the 4 portfolios and the S&P 500'))\n",
+    "\n",
+    "# review summary stats for funds and S&P 500\n",
     "display(daily_returns.describe())"
    ]
   },
