Uploading changes to main code

--- a/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
+++ b/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "e7e627dd-227e-490d-8570-cf5eb5762958",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "993bef9a-8a67-411f-bd2a-b1e1af859993",
    "metadata": {},
    "outputs": [
@@ -967,7 +967,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "472bd116-eae1-4b3b-a9e3-13172e00c5f8",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
        "<AxesSubplot:title={'center':'The rolling standard deviation of the 4 portfolios and the S&P 500'}, xlabel='date'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "beda424f-ca5d-4e6d-94a3-2b141690caf4",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
        "<AxesSubplot:title={'center':'The rolling standard deviation of the 4 portfolios'}, xlabel='date'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "7137b513-d545-4b55-b170-fb75a9c2bcfb",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "37977d11-aad3-4135-8ee1-ad5e6caca044",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "40083c2b-3fbd-4abd-b155-d53215e7b7a6",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "196f670b-fe9d-41fb-85fe-147fb7574678",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1134,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "72256455-de2c-420e-a7bc-8adb72933768",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "eccd13de-41ee-4c45-a988-a0d76ef09f51",
    "metadata": {},
    "outputs": [],
@@ -1321,14 +1321,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "59f31bcf-9d4b-4084-aad3-0fa042f48d03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2020-09-04    0.000103\n",
+       "2020-09-08    0.000116\n",
+       "2020-09-09    0.000120\n",
+       "2020-09-10    0.000121\n",
+       "2020-09-11    0.000120\n",
+       "Name: S&P 500, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Diversify the Portfolio\n",
-    "# Calculate the variance of the S&P 500 using a rolling 60-day window."
+    "# Calculate the variance of the S&P 500 using a rolling 60-day window.\n",
+    "variance_60_days = daily_returns['S&P 500'].rolling(window=60).var()\n",
+    "# Visualize the last five rows of the variance of the S&P 500.\n",
+    "variance_60_days.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1b636d66-8415-409a-8ba6-d6e302919401",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2020-09-04    0.000021\n",
+       "2020-09-08    0.000023\n",
+       "2020-09-09    0.000024\n",
+       "2020-09-10    0.000024\n",
+       "2020-09-11    0.000024\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the covariance using a 60-day rolling window \n",
+    "bhi_rolling_60_covariance = daily_returns['BERKSHIRE HATHAWAY INC'].rolling(window=60).cov(daily_returns['S&P 500'])\n",
+    "# Review the last five rows of the covariance data\n",
+    "bhi_rolling_60_covariance.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4250fdc9-8323-43dd-beed-3b380e4c1301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rolling [window=60,center=False,axis=0,method=single]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e02aaf17-4e2a-4144-9dc3-64497c0e196a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
