Uploading changes to main code and readme files

--- a/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
+++ b/Quantatitive_Analysis_Fintech_Investment/risk_return_analysis.ipynb
@@ -1588,8 +1588,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b4f5d4ad-9318-4a9e-9a56-954dbaf7f866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 1: Which of the two portfolios seem more sensitive to movements in the S&P 500?\n",
+    "    \n",
+    "# Answer: # Based on the plots, we can see that Berkshire Hathaway Inc's rolling beta is more sensitive to movements in the market (S&P 500). It's beta lies between 0 and 0.5. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "11b6eea3-617d-4480-b85b-d05ef21eeb43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 2: Which of the two portfolios do you recommend for inclusion in your firm’s suite of fund offerings?\n",
+    "    \n",
+    "# Answer: I would recommend including Tiger Global Management LLC's portfolio into our firm's suite of fund offerings. Based on the plots, we can see that Berkshire Hathaway Inc's rolling beta is greater than Tiger Global Management Inc's making it more sensitive to movements in the market (S&P 500). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67c1557e-a5bb-4ae2-981e-bbc77f6c5a50",
    "metadata": {},
    "outputs": [],
    "source": []
